New bare bones website

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,22 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import { useCloud } from "freestyle-sh";
+---
+
+<Layout title="Reilly Vejar">
+  <main class="min-h-screen bg-[#f7dfa1]">
+    <div>
+      <h1 class="text-center text-5xl whitespace-pre">
+        <a href="about" class="underline text-blue-700">
+          About
+        </a>
+      </h1>
+    </div>
+</main>
+</Layout>
+
+<!-- ---
+import Layout from "../layouts/Layout.astro";
 import { TheTodoList } from "../cloudstate/todo-list";
 import { TheCounter } from "../cloudstate/counter";
 import { useCloud } from "freestyle-sh";
@@ -64,3 +81,4 @@ const count = await theCounter.getCount();
     color: white;
   }
 </style>
+ -->
