Test workflow again

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const count = await theCounter.getCount();
 <Layout title="Freestyle Astro">
   <main>
     <div>
-      <h1>freestyle.sh – Astro DEPLOYYY</h1>
+      <h1>freestyle.sh – Astro</h1>
       <TodoList client:load items={items} />
     </div>
   </main>
